# Backdropper

./: .gitignore  AGENTS.md  CMakeLists.txt  PRIVACY.md  README.md  THIRD_PARTY_NOTICES.md  VERSION.md
.github/workflows/: windows-build.yml
plans/20260617-1150-windows-thumbnail-backgrounds/: plan.md
src/RenderSmoke/: RenderSmoke.cpp
src/Settings/: BackdropperSettings.cpp
src/ThumbProvider/: BackdropperThumb.cpp  BackdropperThumb.def
src/Updater/: BackdropperUpdater.cpp
src/common/: format_support.cpp  format_support.h  render.cpp  render.h  settings.cpp  settings.h  thumbnail_cache.cpp  thumbnail_cache.h  version.h
src/resources/: Backdropper.rc  BackdropperVersion.rc.in  resource.h
tools/: capture-screenshots.ps1  check-registration.ps1  register-dev.ps1  stop-build-app.ps1  unregister-dev.ps1  update-backdropper.ps1
